2003-11-16  Don Porter	<dgp@users.sourceforge.net>

	* win/makefile.vc:	Restored consistency of pkgIndex.tcl file
	with that generated by Makefile.

2003-11-15  Vince Darley <vincentdarley@users.sourceforge.net>

	* macosx/tkMacOSXScrlbr.c: [Bug 842952] correct scrollbar
	tracking with mouse.  Also increased scrollbar resolution for
	better scrolling in very large text widgets.
	
	* generic/tkTextDisp.c: cleanup and clarify some comments
	* doc/text.n: cleanup some of the markup.
	
2003-11-15  David Gravereaux <davygrvy@pobox.com>

	* win/makefile.vc: Fixes pkgIndex.tcl generation so a symbols build
	is loaded when Tcl is symbols.

2003-11-15  Vince Darley <vincentdarley@users.sourceforge.net>

	* generic/tkTextDisp.c: 
	* tests/textDisp.test: fixes to one more old Tk [Bug 422411]
	this time concerning inconsistent tab interpretation.  Also
	fixed an unreported new problem if a single logical line wraps
	to fill more than the entire display.
	
	* macosx/tkMacOSXScrlbr.c: fix to [Bug 840978] where the size
	of the proportional scrollbar was calculated wrongly.
	
2003-11-14  Joe English  <jenglish@users.sourceforge.net>
	* doc/text.n: Fix markup errors.

2003-11-15  Vince Darley <vincentdarley@users.sourceforge.net>

	* generic/tkText.h: 
	* generic/tkText.c: 
	* generic/tkTextDisp.c: 
	* generic/tkTextWind.c: 
	* generic/tkTextTag.c: 
	* tests/textDisp.test: fixes to another pair of old Tk bugs
	[Bug 220816] (can't scroll horizontally to display all of last
	character), [Bug 842498] (xview confused on window creation),
	and more efficiency in tag creation.  Added new tests.
	
2003-11-14  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tkTextDisp.c (TkTextRedrawTag): Get the correct number
	of lines in the region to be updated.  This fix due to Vince Darley.
	(TkTextUpdateLineMetrics): Return the correct marker value when we
	know the update loop should terminate. [Bug 837300]

2003-11-13  Vince Darley <vincentdarley@users.sourceforge.net>
